# Dalek

./: .asoundrc  .gitignore  README.md  alextest.py  audio.py  audiosampling.py  cascade_blueprint.txt  dalek.py  ears.py  motor.py  pyproject.toml  requirements.txt  requirements_fdlite.txt  test_fdlite.py  test_mediapipe.py  utils.py  voice.py  webcam.py  webcam_fdlite.py
NeoPixelController/: NeoPixelController.ino
dalek_venv/: pyvenv.cfg
src/dalek/: audio.py  dalek.py  ears.py  game_engine.py  invaders.py  lights.py  mock_joystick.py  runner.py  snake.py  test_audio.py  webcam.py  webcam_fdlite.py
